--- a/Gallery/templates/Gallery/index.html
+++ b/Gallery/templates/Gallery/index.html
@@ -23,9 +23,22 @@
         </div>
 
     </header>
+    
     <div class="gallery">
-        <img src="{% static 'Gallery/elevator.jpg'%}" href="{% static 'Gallery/elevator-zoom.jpg'%}" >
-        <img src="{% static 'Gallery/elevator-zoom.jpg'%}">
+        <a href="{% static 'Gallery/Bra-Zoom.jpg'%}">
+            <img alt="Highly detailed graphite drawing of Emma in her bathroom, hand over her head wearing baggy jeans and a floral lace bra. Visible on the counter are bottles of oleplex, scissors, hair oil, and reflections of all of these. " src="{% static 'Gallery/Bra_Main.jpg'%}">
+        </a>
+        <a href="{% static 'Gallery/Elevator-Zoom.jpg'%}">
+            <img alt="Highly detailed graphite drawing of Emma in her bathroom, hand over her head wearing baggy jeans and a floral lace bra. Visible on the counter are bottles of oleplex, scissors, hair oil, and reflections of all of these. " src="{% static 'Gallery/Elevator_Main.jpg'%}">
+        </a>
+        <a href="{% static 'Gallery/Office-Zoom.jpg'%}">
+            <img alt="Highly detailed graphite drawing of Emma in her bathroom, hand over her head wearing baggy jeans and a floral lace bra. Visible on the counter are bottles of oleplex, scissors, hair oil, and reflections of all of these. " src="{% static 'Gallery/Office_Main.jpg'%}">
+        </a>
+        <h1> CW NUDITY </h1>
+        <a href="{% static 'Gallery/Topless-Zoom.jpg'%}">
+            <img alt="Highly detailed graphite drawing of Emma in her bathroom, hand over her head wearing baggy jeans and a floral lace bra. Visible on the counter are bottles of oleplex, scissors, hair oil, and reflections of all of these. " src="{% static 'Gallery/Topless_Main.jpg'%}">
+        </a>
+        
     
     </div>
         <div class="s-m">
