--- a/Home_Page/templates/Home_Page/index.html
+++ b/Home_Page/templates/Home_Page/index.html
@@ -24,16 +24,13 @@
 
     </header>
 
-    <body class="content">   
+   
     <div class="hometext">
-        <h1><i href="{% url 'Clothing' %}" >Find Clothing That</i></h1>
-        <h1><i href="{% url 'Clothing' %}" >Fits you</i></h1>
+        <a href="{% url 'Clothing' %}" ><button type="">Find Clothing That Fits You  ♥</button></a>
+        
     </div>   
 
-    <div class="homeheart">
-        <a href="{% url 'Clothing' %}">♥</a>
-    </div>
-    
+
     <div class="s-m">
         <a href="https://www.instagram.com/emma_____harris/">
             <img alt="instagram" src="{% static 'Home_Page/instagram-symbol.png' %}">
@@ -42,6 +39,6 @@
         <img alt='twitter' src="{% static 'Home_Page/twitter-symbol.webp' %}">
         </a>
     </div>
-    </body>
+   
 </body>
 </html>
