--- a/webContent/templates/home.html
+++ b/webContent/templates/home.html
@@ -1,1 +1,15 @@
 {% extends "layout.html" %}
+
+    {% block content %}
+
+        <div class="content">
+            <div class="hometext">
+                <h1>Find Clothing That</h1>
+                <h1>Fits You</h1>
+            </div>
+            <div class="homeheart">
+                <a href="{% url 'clothing' %}">♥</a>
+            </div>
+        </div>
+     {% endblock %}
+
