--- a/webContent/templates/layout.html
+++ b/webContent/templates/layout.html
@@ -1,10 +1,44 @@
-<nav>
-    <a href="{% url 'home' %}">Home</a>
-    <a href="{% url 'gallery' %}">Gallery</a>
-    <a href="{% url 'essay' %}">Essay</a>
-    <a href="{% url 'clothing' %}">Clothing</a>
-    <a href="{% url 'about' %}">About</a>
-</nav>
+{% load static %}
 
-{% block content %}
-{% endblock %}
+<!DOCTYPE html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title> Emma Harris </title>
+
+<link rel= "stylesheet" href="{% static 'styles.css' %}">
+<script src="https://kit.fontawesome.com/419f457776.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <header>
+        <div class="container">
+            <h2><a href="{% url 'home' %}">Emma Harris</a></h2>
+            <nav>
+                <ul>
+                    <li><a href="{% url 'home' %}">Home</a></li>
+                    <li><a href="{% url 'gallery' %}">Gallery</a></li>
+                    <li><a href="{% url 'essay' %}">Essay</a></li>
+                    <li><a href="{% url 'clothing' %}">Clothing</a></li>
+                    <li><a href="{% url 'about' %}">About</a></li>
+                </ul>
+            </nav>
+        </div>
+     </header>
+
+        {% block content %}
+        {% endblock %}
+
+      <footer>
+    <div class="s-m">
+        <a href="https://www.instagram.com/emma_____harris/">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://twitter.com/emma_____harris">
+            <i class="fab fa-twitter"></i>
+        </a>
+    </div>
+</footer>
+
+</body>
+</html>
